# UltraLegacy

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  run_bochs.bat  run_bochs_debug.bat  run_qemu.bat  run_qemu.sh
Boot/: CMakeLists.txt  Makefile  MyKernel.asm  UKLoader.asm  UltraBoot.asm  UltraMBR.asm  build_floppy.sh  build_iso.sh
Boot/Bootloader/: BPB.inc  Common.inc  CommonMacros.inc  LoaderUtils.inc  Macros.inc  Makefile  UKLoader.asm  UltraBoot.asm  Utility.inc
Boot/Linux/: build_floppy.sh  build_iso.sh  ffc
Boot/Scripts/: Makefile  build_image.bat  build_image.sh
Boot/Windows/: bochsrc.bxrc  build_floppy.bat
Boot/include/: BPB.inc  Common.inc  CommonMacros.inc  LoaderUtils.inc
Kernel/: CMakeLists.txt  Entrypoint.asm  GDT.cpp  GDT.h  InterruptDescriptorTable.h  InterruptServiceRoutines.cpp  InterruptServiceRoutines.h  Itanium.cpp  Kernel.cpp  Linker.ld  Linker32.ld  Linker64.ld  Log.h  Macros.h  Makefile  Types.h  crt0.asm  crti.asm  crtn.asm
Kernel/ACPI/: ACPI.cpp  ACPI.h
Kernel/Architechture/x86/: APTrampoline.asm  Entrypoint.asm  TaskSwitcher.asm
Kernel/Architechture/x86-64/: Entrypoint.asm  TaskSwitcher.asm
Kernel/Architecture/x86/: APTrampoline.asm  Entrypoint.asm  Interrupts.asm  Interrupts.inc  Linker.ld  TaskSwitcher.asm
Kernel/Architecture/x86-64/: APTrampoline.asm  Common.inc  Entrypoint.asm  Interrupts.asm  Linker.ld  TaskSwitcher.asm
Kernel/Common/: Atomic.h  CircularBuffer.h  Conversions.h  DynamicArray.h  DynamicBitArray.h  InitializerList.h  List.h  Lock.h  LogRing.h  Logger.h  Macros.h  Map.h  Math.h  Memory.h  Optional.h  Pair.h  RedBlackTree.h  RefPtr.h  Set.h  Span.h  StaticArray.h  String.h  Traits.h  Types.h  UniquePtr.h  Utililites.h  Utilities.h
Kernel/Core/: APTrampoline.asm  Boot.h  CMOS.h  CPU.cpp  CPU.h  Conversions.h  DebugTerminal.cpp  DebugTerminal.h  ErrorCode.h  FPU.cpp  FPU.h  GDT.cpp  GDT.h  IO.h  InterruptDisabler.h  Itanium.cpp  Logger.h  Macros.h  Memory.h  Registers.h  RepeatUntil.h  Runtime.cpp  Runtime.h  Serial.h  Syscall.cpp  Syscall.h  Terminal.cpp  Terminal.h  Traits.h  Types.h  crt0.asm
Kernel/Drivers/: Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  Key.h  Keyboard.h  MMIOHelpers.h  Mouse.h  Storage.cpp  Storage.h  TouchPad.cpp  TouchPad.h
Kernel/Drivers/AHCI/: AHCI.cpp  AHCI.h  AHCIPort.cpp  AHCIPort.h  Structures.h
Kernel/Drivers/Keyboard/: Keyboard.cpp  Keyboard.h  PS2Keyboard.cpp  PS2Keyboard.h
Kernel/Drivers/PCI/: Access.cpp  Access.h  MMIOAccess.cpp  MMIOAccess.h  PCI.cpp  PCI.h
Kernel/Drivers/PS2/: PS2Controller.cpp  PS2Controller.h  PS2Device.h  PS2Keyboard.cpp  PS2Keyboard.h  PS2Mouse.cpp  (+3 more)
Kernel/FileSystem/: Directory.h  DiskCache.cpp  DiskCache.h  FAT32.cpp  FAT32.h  File.h  FileDescription.cpp  FileDescription.h  FileIterator.cpp  FileIterator.h  FileSystem.h  IOStream.h  Pipe.cpp  Pipe.h  Utilities.h  VFS.cpp  VFS.h
Kernel/GUI/: Compositor.cpp  Compositor.h
Kernel/Interrupts/: APIC.cpp  APIC.h  Common.h  DeferredIRQ.cpp  DeferredIRQ.h  ExceptionDispatcher.cpp  ExceptionDispatcher.h  ExceptionHandler.h  IDT.cpp  IDT.h  IOAPIC.cpp  IOAPIC.h  IPICommunicator.cpp  IPICommunicator.h  IRQHandler.cpp  IRQHandler.h  IRQManager.cpp  IRQManager.h  ISR.cpp  ISR.h  IVectorAllocator.cpp  IVectorAllocator.h  InterruptController.cpp  InterruptController.h  InterruptDescriptorTable.cpp  InterruptDescriptorTable.h  InterruptHandler.cpp  InterruptHandler.h  InterruptManager.cpp  InterruptManager.h  InterruptRequestHandler.h  InterruptRequestManager.cpp  InterruptRequestManager.h  InterruptServiceRoutines.cpp  InterruptServiceRoutines.h  LAPIC.cpp  LAPIC.h  MP.cpp  MP.h  PIC.cpp  (+15 more)
Kernel/Memory/: AddressSpace.cpp  AddressSpace.h  Allocator.cpp  Allocator.h  BootAllocator.cpp  BootAllocator.h  GenericPagingEntry.h  GenericPagingTable.cpp  GenericPagingTable.h  HeapAllocator.cpp  HeapAllocator.h  MemoryManager.cpp  MemoryManager.h  MemoryMap.cpp  MemoryMap.h  NonOwningVirtualRegion.cpp  NonOwningVirtualRegion.h  PAT.cpp  PAT.h  Page.cpp  Page.h  PageDirectory.cpp  PageDirectory.h  PageEntry.h  PageTable.cpp  PageTable.h  PhysicalMemory.h  PhysicalRegion.cpp  PhysicalRegion.h  PrivateVirtualRegion.cpp  PrivateVirtualRegion.h  Range.h  SafeOperations.h  SharedVirtualRegion.cpp  SharedVirtualRegion.h  TypedMapping.h  Utilities.cpp  Utilities.h  VirtualAllocator.cpp  VirtualAllocator.h  (+3 more)
Kernel/Multitasking/: Blocker.cpp  Blocker.h  Mutex.cpp  Mutex.h  Process.cpp  Process.h  Scheduler.cpp  Scheduler.h  Sleep.h  TSS.cpp  TSS.h  TaskFinalizer.cpp  TaskFinalizer.h  TaskLoader.cpp  TaskLoader.h  TaskSwitcher.asm  Thread.cpp  Thread.h
Kernel/Time/: RTC.cpp  RTC.h  Time.cpp  Time.h
Kernel/WindowManager/: Bitmap.cpp  Bitmap.h  ClassicTheme.cpp  ClassicTheme.h  Color.h  Compositor.cpp  Compositor.h  Cursor.cpp  Cursor.h  DemoTTY.cpp  DemoTTY.h  Event.h  EventManager.cpp  EventManager.h  KeyboardEvent.h  MouseEvent.h  Painter.cpp  Painter.h  Point.h  Rect.h  Screen.cpp  Screen.h  Theme.cpp  Theme.h  Utilities.h  VirtualKey.h  Window.cpp  Window.h  WindowFrame.cpp  WindowFrame.h  WindowManager.cpp  WindowManager.h
Ports/: CMakeLists.txt  install_doom.sh
Tests/: CMakeLists.txt  run_all.bat  run_all.sh
Tests/Environment/: README.md
Tests/Source/: Main.cpp  TestBootAllocator.cpp  TestCircularBuffer.cpp  TestCommonUtilities.cpp  TestDiskCache.cpp  TestDynamicArray.cpp  TestDynamicBitArray.cpp  TestFileSystem.cpp  TestHeapAllocator.cpp  TestLibCCTypes.cpp  TestLibCString.cpp  TestList.cpp  TestLogRing.cpp  TestMemoryMap.cpp  TestMemoryUtilities.cpp  TestOptional.cpp  TestRange.cpp  TestRedBlackTree.cpp  TestRefPtr.cpp  TestRunner.h  TestString.cpp  TestUniquePtr.cpp  TestVirtualAllocator.cpp
Userland/LibC/: CMakeLists.txt  assert.c  assert.h  crt0.asm  crt0.c  crti.asm  crtn.asm  ctype.c  ctype.h  entry.c  errno.c  errno.h  inttypes.h  malloc.c  math.c  math.h  stdint.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  strings.c  strings.h
Userland/Ultra/: CMakeLists.txt  File.c  File.h  Memory.h  Process.c  Process.h  Syscall.c  Syscall.h  Ultra.h  Window.h
(+86 files in other folders)
