cmake_minimum_required(VERSION 3.6)

project (UltraOSTests)

set(KERNEL_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../Kernel")
set(OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
set(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Source")
set_property(GLOBAL PROPERTY EXTERNAL_KERNEL_FILES)

include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}/Environment
)

function(KERNEL_FILE)
    cmake_parse_arguments(
            ARG
            ""
            "PATH;FILE"
            ""
            ${ARGN}
    )

    get_property(EXTERNAL_KERNEL_FILES_LOCAL GLOBAL PROPERTY EXTERNAL_KERNEL_FILES)
    list(APPEND EXTERNAL_KERNEL_FILES_LOCAL "${CMAKE_CURRENT_SOURCE_DIR}/Environment/${ARG_PATH}/${ARG_FILE}")
    set_property(GLOBAL PROPERTY EXTERNAL_KERNEL_FILES ${EXTERNAL_KERNEL_FILES_LOCAL})

    add_custom_command(
    OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/Environment/${ARG_PATH}/${ARG_FILE}"
    COMMAND ${CMAKE_COMMAND} -E copy
            ${KERNEL_ROOT_DIR}/${ARG_PATH}/${ARG_FILE}
            ${CMAKE_CURRENT_SOURCE_DIR}/Environment/${ARG_PATH})

endfunction(KERNEL_FILE)

KERNEL_FILE(PATH "Memory" FILE "HeapAllocator.cpp")
KERNEL_FILE(PATH "Memory" FILE "HeapAllocator.h")
KERNEL_FILE(PATH "Common" FILE "Types.h")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY         "${OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG   "${OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG   "${OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG   "${OUTPUT_DIRECTORY}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")

get_property(EXTERNAL_KERNEL_FILES_LOCAL GLOBAL PROPERTY EXTERNAL_KERNEL_FILES)

FILE(GLOB_RECURSE SORUCE_FILES "${SOURCE_DIR}/*cpp" "${SOURCE_DIR}/*h")

add_executable(RunTests
        ${SORUCE_FILES}
        ${EXTERNAL_KERNEL_FILES_LOCAL})

target_compile_features(RunTests PRIVATE cxx_std_17)

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT RunTests)
